# i3status

./: .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.md  I3STATUS_VERSION  LICENSE  Makefile  Makefile.am  README  README.md  config.c  config.h  configure.ac  i3status  i3status.1  i3status.c  i3status.conf  i3status.h  meson.build  meson_options.txt  wmiistatus.1  wmiistatus.c  wmiistatus.conf  wmiistatus.h  wmiistatus.init
.cache/clangd/index/: auto_detect_format.c.394371AB33DB7871.idx  first_network_device.c.0DCCBA44212190B5.idx  format_placeholders.c.17292841666E5680.idx  general.c.BEDC8F982DCA83E4.idx  i3status.c.9786FC4892F82B03.idx  i3status.h.EDCE5C53C3F6EFA0.idx  output.c.005BD4C420AADE1D.idx  print_battery_info.c.B16C83F9F42BDABC.idx  print_cpu_temperature.c.96D5238721653365.idx  print_cpu_usage.c.4BA78F993DB944EF.idx  print_ddate.c.8B1D55E8CC85CC6C.idx  print_disk_info.c.4F2BDB2C4BFE5EDF.idx  print_eth_info.c.7BABFD49CC104E65.idx  print_file_contents.c.3806CF3A90EC80C9.idx  print_ip_addr.c.B2EAC75945F941DE.idx  print_ipv6_addr.c.901793B7CA72B307.idx  print_load.c.7E2D11DB36D91DA2.idx  print_mem.c.B7AE6436EED6D6C2.idx  (+8 more)
.github/workflows/: main.yml
contrib/: any_position_wrapper.sh  check-tubestatus.py  check_mail.py  ipstatus.sh  measure-net-speed-i3status.bash  measure-net-speed.bash  net-speed  net-speed.sh  tubestatus.py  tubestatus.readme.md  tubestatusdef.py  wrapper.pl  wrapper.py
debian/: README.Debian  changelog  control  copyright  i3status-common.files  i3status-wmii.1  i3status-wmii.init  i3status-wmii.manpages  i3status.1  i3status.README.Debian  i3status.i3status-wmii.default  i3status.i3status-wmii.init  i3status.manpages  i3status.postinst  rules  watch
docker/: Dockerfile  README.md  i3status_build
etc/: i3status.conf
include/: X11Exception.h  XKeyboard.h  format_placeholders.h  i3status.h  queue.h
man/: Makefile  asciidoc.conf  asciidoc.conf.in  i3status.man
meson/: meson-dist-script
src/: XKeyboard.cpp  auto_detect_format.c  config.c  first_network_device.c  format_placeholders.c  general.c  get_battery_info.c  get_cpu_temperature.c  get_eth_info.c  get_ip_addr.c  get_ipv6_addr.c  get_load.c  get_wireless_info.c  output.c  print_backlight.c  print_battery_info.c  print_brightness.c  print_cmd.c  print_cpu_freq.c  print_cpu_temperature.c  print_cpu_usage.c  print_custom.c  print_ddate.c  print_disk_info.c  print_eth_info.c  print_exec.c  print_file.c  print_file_contents.c  print_hostname.c  print_ibus.c  print_ip_addr.c  print_ipv6_addr.c  print_kbd_layout.cc  print_keyboard.c  print_keyboard_layout.c  print_keyboard_status.c  print_load.c  print_lst.c  print_mail_info.c  print_maildir_info.c  (+17 more)
testcases/001-battery/: expected_output.txt  i3status.conf
testcases/002-cpu-temp/: expected_output.txt  i3status.conf
testcases/003-path-exists/: expected_output.txt  i3status.conf
testcases/004-run-watch/: i3status.conf
testcases/005-cpu-temp-max-threshold-format/: expected_output.txt  i3status.conf
testcases/006-cpu-usage-max-threshold-format/: i3status.conf
testcases/007-cpu-usage-degraded-threshold-format/: expected_output.txt
testcases/008-load-max-threshold-format/: i3status.conf
testcases/009-brightness/: expected_output.txt
testcases/009-brightness-divide-by-zero/: expected_output.txt  i3status.conf
testcases/009-brightness-missing-actual/: i3status.conf
testcases/009-brightness-missing-maximum/: i3status.conf
testcases/009-disk-low-threshold-format/: expected_output.txt  i3status.conf
testcases/010-cpu-usage/: expected_output.pl  expected_output.txt  i3status.conf  setup.pl  stat
testcases/011-cpu-usage/: cleanup.pl  expected_output.pl  expected_output.txt  i3status.conf  setup.pl  stat
testcases/012-cpu-usage-error/: expected_output.txt  i3status.conf  stat
testcases/013-cpu-usage-error/: i3status.conf  stat
testcases/014-battery-capacity/: expected_output.txt  i3status.conf  uevent
testcases/015-battery-capacity/: expected_output.txt  i3status.conf  uevent
testcases/016-ethernet-down/: expected_output.txt  i3status.conf
testcases/017-wireless-down/: expected_output.txt  i3status.conf
testcases/018-battery-capacity/: i3status.conf
testcases/019-battery-capacity/: expected_output.txt  i3status.conf
testcases/020-percentliteral-battery/: BAT0_uevent  expected_output.txt  i3status.conf
testcases/020-percentliteral-cpu_temperature/: expected_output.txt  i3status.conf  temp1_input
testcases/020-percentliteral-cpu_usage/: expected_output.pl  expected_output.txt  i3status.conf
testcases/020-percentliteral-ddate/: i3status.conf
testcases/020-percentliteral-disk/: i3status.conf
testcases/020-percentliteral-ethernet/: i3status.conf
testcases/020-percentliteral-ipv6/: i3status.conf
testcases/020-percentliteral-load/: i3status.conf
testcases/020-percentliteral-memory/: i3status.conf
testcases/020-percentliteral-path_exists/: i3status.conf
testcases/020-percentliteral-time/: i3status.conf
testcases/020-percentliteral-tztime/: i3status.conf
testcases/020-percentliteral-volume/: i3status.conf
testcases/020-percentliteral-wireless/: i3status.conf
testcases/021-battery-second/: i3status.conf
testcases/022-cpu-usage-tenth-cpu/: expected_output.pl  i3status.conf  setup.pl
testcases/023-battery-not-charging/: BAT0_uevent  expected_output.txt  i3status.conf
testcases/024-cpu-usage-invalid-cpu/: expected_output.pl  i3status.conf
testcases/024-static-text/: biff.txt  expected_output.txt  i3status.conf
testcases/025-file-contents/: expected_output.txt  i3status.conf
testcases/026-battery-time-to-empty/: BAT0_uevent  BAT1_uevent  expected_output.txt  i3status.conf
testcases/027-battery-low-threshold-format/: BAT0_uevent  i3status.conf
testcases/027-battery-quartiles/: BAT0_uevent  BAT0_uevent_half_pct  BAT0_uevent_half_time  BAT0_uevent_low_pct  BAT0_uevent_low_time  BAT0_uevent_quarter_pct  BAT0_uevent_quarter_time  BAT0_uevent_three_quarters_pct  BAT0_uevent_three_quarters_time  expected_output.txt  i3status.conf
travis/: run-tests.pl  run-tests.pl.in
(+2 files in other folders)
